fix: overflow header

--- a/style.css
+++ b/style.css
@@ -109,7 +109,9 @@ header {
     grid-area: 1 / 2 / 2 / -1;
     display: grid;
     grid-template-rows: repeat(2, 4rem);
-    grid-template-columns: minmax(0, 2fr) minmax(0, 1fr);
+    grid-template-columns: minmax(min-content, 1fr) min-content;
+    min-width: fit-content;
+    overflow: hidden;
 }
 
 .sidebar,
@@ -197,7 +199,7 @@ main {
     gap: var(--spacing-sm);
 
     & input[type="search"] {
-        flex: 1;
+        flex: 1 0 0;
         height: 2rem;
         border-radius: 8px;
         border-color: var(--foreground);
@@ -215,12 +217,16 @@ main {
     & .userName {
         font-weight: 900;
     }
+
+    & > * {
+        min-width: min-content;
+    }
 }
 
 .userInfo {
     display: grid;
     grid-template-rows: repeat(2, minmax(0, 1fr));
-    grid-template-columns: min-content minmax(0, 1fr);
+    grid-template-columns: min-content minmax(min-content, 1fr);
     align-items: center;
 
     & img {
@@ -231,6 +237,7 @@ main {
 
     & span {
         font-weight: 900;
+        text-wrap: nowrap;
     }
 
     & span:first-of-type {
